--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,16 @@ html, body {
   width: 100%;
 }
 
+.button-control {
+  width: 3em;
+  height: 3em;
+}
+
+.button-control button {
+  width: 100%;
+  height: 100%;
+}
+
 .rotate-north {
     left: .5em;
     top: 4em;
@@ -19,7 +29,7 @@ html, body {
 
 .polygon-editor {
   left: .5em;
-  top: 5.5em;
+  top: 7.5em;
 }
 
 .polygon-editor.selected {
@@ -28,5 +38,5 @@ html, body {
 
 .cut-grid {
   left: .5em;
-  top: 7em;
+  top: 11em;
 }
