--- a/src/style.css
+++ b/src/style.css
@@ -33,8 +33,9 @@ html, body {
   top: 7.5em;
 }
 
-.polygon-editor.selected {
-  border: solid 1px red;
+.polygon-editor.selected button {
+  border: solid 1px darkgray;
+  background-color: lightgray;
 }
 
 .cut-grid {
