--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 html, body {
   margin: 0;
   height: 100%;
+  font-family: sans-serif;
 }
 
 #map {
@@ -55,4 +56,36 @@ html, body {
 
 #fileDialog {
   display: none;
+}
+
+.toolbox {
+  left: 4em;
+  top:.5em;
+  border-radius: 4px;
+  border: solid 1px lightgray;
+  width: 120px;
+  background-color: white;
+  position: absolute;
+  font-size: 12px;
+}
+
+.toolbox .row {
+  box-sizing: border-box;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 4px;
+  padding-right: 4px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 50px auto;
+  align-items: baseline;
+}
+
+.toolbox .row .name {
+  height: 100%;
+}
+
+.toolbox .row input {
+  width:100%;
+  height: 100%;
 }
